welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: value length_= is not a member of Array[Int]
	if(nums.length=0){ c=0}
                ^